--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
   },
   "include": [
     "src/**/*.ts"
-, "src/errors/not-found-err.js"  ],
+, "src/errors/not-found-err.ts"  ],
   "exclude": [
     "node_modules"
   ],
